--- a/tpl/index.phtml
+++ b/tpl/index.phtml
@@ -9,6 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <?php if ($erreur != ''):?>
+        <p><?=$erreur?></p>
+    <?php endif;?>
     <?= $svg; ?>
 </body>
 </html>
